V1:fixed navbar bug screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -153,6 +153,11 @@ button,
 select {
   text-transform: none;
 }
+@media (max-width: 768px) {
+  .hide-on-md {
+    display: none;
+  }
+}
 /*
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Remove default button styles.
